[package]
name = "baize"
version = "0.1.0"
edition = "2021"
description = """
baize
"""
documentation = "https://github.com/hail812/baize"
homepage = "https://github.com/hail812/baize"
repository = "https://github.com/hail812/baize"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
